--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/recharts": "^1.8.24",
     "d3": "^7.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.3.2",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
