--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/recharts": "^1.8.24",
+    "antd": "^5.1.7",
     "d3": "^7.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
